--- a/.github/workflows/actions-test-and-deploy.yml
+++ b/.github/workflows/actions-test-and-deploy.yml
@@ -5,7 +5,7 @@ branches:
   - main
 jobs:
 greeting:
-runs-on: ubuntu-latest
+runs-on: macOS-latest
 steps:
   - name: Say Hello
 run: echo "CICD, it's dynamite"
