--- a/.github/workflows/actions-test-and-deploy.yml
+++ b/.github/workflows/actions-test-and-deploy.yml
@@ -1,34 +1,30 @@
 name: Test and Deploy
 on: [push]
 jobs:
-  Greeting:
-    runs-on: ubuntu-latest
-    steps:
-      - run: echo "CICD, it's dynamite"
-Test:
-	runs-on: ubuntu-latest
-	steps:
-		- name: Checkout and clone repo
-			uses: actions/checkout@v2
-		- name: Install Dependencies
-			run: npm install
-		- name: Setup Postgres
-			uses: harmon758/postgresql-action@v1
-			with:
-			postgresql db: nc_games_test
-			postgresql user: mr_testerson
-			postgresql password: passw0rd
-		- name: Run Integration Tests
-			run: PGDATABASE=nc_games_test PGUSER=mr_testerson PGPASSWORD=passw0rd npm test
-			deploy:
-			runs-on: ubuntu-latest
-			needs: test
-# steps:
-# - name: Checkout and clone repo
-#   uses: actions/checkout@v2
-# - name: Deploy to Heroku
-#   uses: akhileshns/heroku-deploy@v3.12.12
-#   with:
-#   heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-#   herokup_app_name: ${{secrets.HEROKU_APP_NAME}}
-#   heroku_email: ${{secrets.HEROKU_EMAIL}}
+  Test:
+		runs-on: ubuntu-latest
+		steps:
+			- name: Checkout and clone repo
+				uses: actions/checkout@v2
+			- name: Install Dependencies
+				run: npm install
+			- name: Setup Postgres
+				uses: harmon758/postgresql-action@v1
+				with:
+				postgresql db: nc_games_test
+				postgresql user: mr_testerson
+				postgresql password: passw0rd
+			- name: Run Integration Tests
+				run: PGDATABASE=nc_games_test PGUSER=mr_testerson PGPASSWORD=passw0rd npm test
+				deploy:
+				runs-on: ubuntu-latest
+				needs: test
+		steps:
+			- name: Checkout and clone repo
+				uses: actions/checkout@v2
+			- name: Deploy to Heroku
+				uses: akhileshns/heroku-deploy@v3.12.12
+				with:
+				heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+				herokup_app_name: ${{secrets.HEROKU_APP_NAME}}
+				heroku_email: ${{secrets.HEROKU_EMAIL}}
