use psql v14.4 in yaml

--- a/.github/workflows/actions-test-and-deploy.yml
+++ b/.github/workflows/actions-test-and-deploy.yml
@@ -11,6 +11,7 @@ jobs:
       - name: Setup Postgres
         uses: harmon758/postgresql-action@v1
         with:
+				  postgresql version: '14.4'
           postgresql db: nc_games_test
           postgresql user: mr_testerson
           postgresql password: passw0rd
