--- a/.github/workflows/actions-test-and-deploy.yml
+++ b/.github/workflows/actions-test-and-deploy.yml
@@ -17,3 +17,14 @@ jobs:
           postgresql password: passw0rd
       - name: Run Integration Tests
         run: PGDATABASE=nc_games_test PGUSER=mr_testerson PGPASSWORD=passw0rd npm test
+  Deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout and clone repo
+			  uses: actions/checkout@v2
+      - name: Deploy to Heroku
+        uses: akhileshns/heroku-deploy@v3.12.12
+        with:
+        heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+        herokup_app_name: ${{secrets.HEROKU_APP_NAME}}
+        heroku_email: ${{secrets.HEROKU_EMAIL}}
