--- a/.github/workflows/actions-test-and-deploy.yml
+++ b/.github/workflows/actions-test-and-deploy.yml
@@ -19,6 +19,7 @@ jobs:
         run: PGDATABASE=nc_games_test PGUSER=mr_testerson PGPASSWORD=passw0rd npm test
   Deploy:
     runs-on: ubuntu-latest
+    needs: Test
     steps:
       - name: Checkout and clone repo
         uses: actions/checkout@v2
